Implemented interdependent spinners for location.

--- a/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/res/layout/content_main.xml
+++ b/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/res/layout/content_main.xml
@@ -114,6 +114,11 @@
                 android:inputType="textPersonName" />
 
 
+            <DatePicker
+                android:layout_width="312dp"
+                android:layout_height="62dp"
+                android:id="@+id/datePicker" />
+
             <TextView
 
                 android:id="@+id/textView4"
