--- a/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/res/layout/content_main.xml
+++ b/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/res/layout/content_main.xml
@@ -124,7 +124,7 @@
 
             <EditText
                 android:id="@+id/dobPicker"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
                 android:hint="@string/dobPicker" />
