Firebase database is set up and now stores account information.

--- a/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/res/layout/content_main.xml
+++ b/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/res/layout/content_main.xml
@@ -153,6 +153,31 @@
 
             </RadioGroup>
 
+            <TextView
+
+                android:id="@+id/username"
+
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+
+                android:text="@string/Username"
+
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+
+
+            <EditText
+
+                android:id="@+id/editUserName"
+
+                android:layout_width="match_parent"
+
+                android:layout_height="wrap_content"
+
+                android:ems="10"
+
+                android:inputType="text" />
 
             <TextView
 
